--- a/Bewerben.html
+++ b/Bewerben.html
@@ -26,7 +26,7 @@
         <h1 class="text-xl font-bold">San Andreas Highway Patrol - Human Resources</h1>
       </div>
       <nav class="space-x-6">
-        <a href="Home.html" class="hover:text-yellow-400">Home</a>
+        <a href="index.html" class="hover:text-yellow-400">Home</a>
         <a href="https://sites.google.com/view/carnifexe" target="_blank" class="hover:text-yellow-400">Unser Team</a>
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="text-yellow-400 underline font-semibold">Bewerben</a>
