--- a/regeln.html
+++ b/regeln.html
@@ -43,7 +43,7 @@
         <h1 class="text-xl font-bold">San Andreas Highway Patrol - Law Enforcement</h1>
       </div>
       <nav class="space-x-6">
-        <a href="Home.html" class="hover:text-yellow-400">Home</a>
+        <a href="index.html" class="hover:text-yellow-400">Home</a>
         <a href="https://sites.google.com/view/carnifexe" target="_blank" class="hover:text-yellow-400">Unser Team</a>
         <a href="regeln.html" class="text-yellow-400 underline font-semibold">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="hover:text-yellow-400">Bewerben</a>
