--- a/Beschwerden.html
+++ b/Beschwerden.html
@@ -32,7 +32,7 @@
         <h1 class="text-xl font-bold">San Andreas Highway Patrol - Law Enforcement</h1>
       </div>
       <nav class="space-x-6">
-        <a href="Home.html" class="hover:text-yellow-400">Home</a>
+        <a href="index.html" class="hover:text-yellow-400">Home</a>
         <a href="https://sites.google.com/view/carnifexe" class="hover:text-yellow-400">Unser Team</a>
         <a href="Regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="hover:text-yellow-400">Bewerben</a>
