--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
         <a href="regeln.html" class="bg-gray-800 bg-opacity-70 p-6 rounded-xl text-center shadow-lg hover:bg-yellow-500 hover:text-black transition">
           <i class="fas fa-comment-dots text-4xl mb-4"></i>
-          <h2 class="text-xl font-semibold">Regeln</h2>
+          <h2 class="text-xl font-semibold">Arbeitsvertrag</h2>
         </a>
         <a href="https://Strafkasten.de" target="_blank" class="bg-gray-800 bg-opacity-70 p-6 rounded-xl text-center shadow-lg hover:bg-yellow-500 hover:text-black transition">
           <i class="fas fa-sign-in-alt text-4xl mb-4"></i>
