--- a/Beschwerden.html
+++ b/Beschwerden.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="x-icon" href="SAHP.png">
   <style>
-    html, body {
+     html, body {
       height: 100%;
       margin: 0;
     }
@@ -20,6 +20,48 @@
     .logo {
       height: 40px;
       width: 40px;
+    }
+    .loader {
+      display: none;
+      position: relative;
+      height: 24px;
+      width: 24px;
+      border: 3px solid rgba(255, 255, 255, 0.2);
+      border-left-color: #5cb85c;
+      border-radius: 50%;
+      animation: rotate 1s linear infinite;
+      margin-left: 10px;
+      vertical-align: middle;
+    }
+    .loader.show {
+      display: inline-block;
+    }
+    .loader.check {
+      animation: none;
+      border: 3px solid #5cb85c;
+    }
+    .loader.check::before {
+      content: "";
+      position: absolute;
+      top: 1px;
+      left: 5px;
+      width: 8px;
+      height: 14px;
+      border-right: 3px solid #5cb85c;
+      border-bottom: 3px solid #5cb85c;
+      transform: rotate(45deg) scale(0);
+      animation: checkmark 0.4s ease-out forwards;
+      opacity: 0;
+    }
+    @keyframes rotate {
+      50% { border-left-color: #9b59b6; }
+      75% { border-left-color: #e67e22; }
+      100% { transform: rotate(360deg); }
+    }
+    @keyframes checkmark {
+      0% { transform: rotate(45deg) scale(0); opacity: 0; }
+      50% { transform: rotate(45deg) scale(1.2); opacity: 1; }
+      100% { transform: rotate(45deg) scale(1); opacity: 1; }
     }
   </style>
 </head>
@@ -53,7 +95,7 @@
         <input name="discord" type="text" class="w-full rounded px-4 py-2 bg-gray-700 border border-gray-600 focus:outline-none" required>
       </div>
       <div>
-        <label class="block mb-1 font-semibold">Name & ID des Beschuldigtem Officers:</label>
+        <label class="block mb-1 font-semibold">Name & ID des Beschuldigten Officers:</label>
         <input name="officer" type="text" class="w-full rounded px-4 py-2 bg-gray-700 border border-gray-600 focus:outline-none" required>
       </div>
       <div>
@@ -68,7 +110,7 @@
         <label class="block mb-1 font-semibold">Beweis-Link (Bodycam)</label>
         <input name="beweise" type="url" class="w-full rounded px-4 py-2 bg-gray-700 border border-gray-600 focus:outline-none">
       </div>
-      <button type="submit" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-full transition">Absenden</button>
+      <button id="submitBtn" type="submit" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-3 px-6 rounded-full transition">Absenden<span id="loader" class="loader"></button>
     </form>
     <p id="responseMsg" class="mt-4 text-center text-sm"></p>
   </main>
@@ -78,20 +120,43 @@
   </footer>
 
   <script>
-    document.getElementById('beschwerdeForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const formData = new FormData(this);
-      fetch('https://script.google.com/macros/s/AKfycbxIjkUn8QV3e0RJQA04oJDYCR3vWwou-cjD4ZRf6xgOKtRc9jAfsEiL0fsKYXnec9lsnA/exec', {
-        method: 'POST',
-        body: formData
-      })
-      .then(res => res.text())
-      .then(msg => {
-        document.getElementById('responseMsg').textContent = "Vielen Dank! Deine Beschwerde wurde übermittelt.";
-        document.getElementById('beschwerdeForm').reset();
-      })
-      .catch(err => {
-        document.getElementById('responseMsg').textContent = "Fehler beim Senden der Beschwerde. Bitte erneut versuchen.";
+    document.addEventListener('DOMContentLoaded', function () {
+      const form = document.getElementById('beschwerdeForm');
+      const submitBtn = document.getElementById('submitBtn');
+      const loader = document.getElementById('loader');
+      let formSubmitted = false;
+
+      form.addEventListener('submit', function(e) {
+        e.preventDefault();
+
+        if (formSubmitted) return;
+        formSubmitted = true;
+
+        submitBtn.disabled = true;
+        loader.classList.add('show');
+        loader.classList.remove('check');
+
+        const formData = new FormData(form);
+        fetch('https://script.google.com/macros/s/AKfycbxIjkUn8QV3e0RJQA04oJDYCR3vWwou-cjD4ZRf6xgOKtRc9jAfsEiL0fsKYXnec9lsnA/exec', {
+          method: 'POST',
+          body: formData
+        })
+        .then(res => res.text())
+        .then(msg => {
+          document.getElementById('responseMsg').textContent = "Vielen Dank! Deine Beschwerde wurde übermittelt.";
+          form.reset();
+          loader.classList.remove('show');
+          loader.classList.add('check', 'show');
+          setTimeout(() => loader.classList.remove('show', 'check'), 3000);
+        })
+        .catch(err => {
+          document.getElementById('responseMsg').textContent = "Fehler beim Senden der Beschwerde. Bitte erneut versuchen.";
+          loader.classList.remove('show');
+        })
+        .finally(() => {
+          submitBtn.disabled = false;
+          formSubmitted = false;
+        });
       });
     });
   </script>
