--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
   <title>SAHP Webportal</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="icon" type="x-icon" href="SAHP.png">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-    .logo {
-      height: 30px;
-      width: 30px;
-    }
-  </style>
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Navigation -->
@@ -32,6 +24,7 @@
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html"class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="hover:text-yellow-400">Beschwerden</a>
+        <a href="#" class="hover:text-yellow-400">Login</a>
       </nav>
     </div>
   </header>
@@ -63,6 +56,10 @@
         <a href="https://Strafkasten.de" target="_blank" class="bg-gray-800 bg-opacity-70 p-6 rounded-xl text-center shadow-lg hover:bg-yellow-500 hover:text-black transition">
           <i class="fas fa-sign-in-alt text-4xl mb-4"></i>
           <h2 class="text-xl font-semibold">Bußgeldrechner</h2>
+        </a>
+        <a href="https://sahp-check.de/" target="_blank" class="bg-gray-800 bg-opacity-70 p-6 rounded-xl text-center shadow-lg hover:bg-yellow-500 hover:text-black transition">
+          <i class="fas fa-sign-in-alt text-4xl mb-4"></i>
+          <h2 class="text-xl font-semibold">SAHP AZ Check</h2>
         </a>
       </div>
     </div>
