--- a/Beschwerden.html
+++ b/Beschwerden.html
@@ -6,6 +6,7 @@
   <title>San Andreas Highway Patrol – Beschwerde</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
   <link rel="icon" type="x-icon" href="SAHP.png">
   <style>
      html, body {
@@ -76,9 +77,10 @@
       <nav class="space-x-6">
         <a href="index.html" class="hover:text-yellow-400">Home</a>
         <a href="https://sites.google.com/view/carnifexe" class="hover:text-yellow-400">Unser Team</a>
-        <a href="Regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
+        <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="text-yellow-400 underline font-semibold">Beschwerden</a>
+        <a href="#" class="hover:text-yellow-400">Login</a>
       </nav>
     </div>
   </header>
