--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <title>SAHP Webportal</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="icon" type="x-icon" href="SAHP.png">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+    .logo {
+      height: 30px;
+      width: 30px;
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white">
   <!-- Navigation -->
@@ -20,11 +27,10 @@
           </div>
       <nav class="space-x-6">
         <a href="index.html" class="text-yellow-400 underline font-semibold">Home</a>
-        <a href="https://sites.google.com/view/carnifexe" target="_blank" class="hover:text-yellow-400">Unser Team</a>
+        <a href="#" target="_blank" class="hover:text-yellow-400">Unser Team</a>
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html"class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="hover:text-yellow-400">Beschwerden</a>
-        <a href="#" class="hover:text-yellow-400">Login</a>
       </nav>
     </div>
   </header>
