--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
       <nav class="space-x-6">
         <a href="index.html" class="text-yellow-400 underline font-semibold">Home</a>
-        <a href="#" target="_blank" class="hover:text-yellow-400">Unser Team</a>
+        <a href="#" class="hover:text-yellow-400">Unser Team</a>
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html"class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="hover:text-yellow-400">Beschwerden</a>
