--- a/Beschwerden.html
+++ b/Beschwerden.html
@@ -76,11 +76,11 @@
       </div>
       <nav class="space-x-6">
         <a href="index.html" class="hover:text-yellow-400">Home</a>
-        <a href="https://sites.google.com/view/carnifexe" class="hover:text-yellow-400">Unser Team</a>
+        <a href="#" class="hover:text-yellow-400">Unser Team</a>
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="text-yellow-400 underline font-semibold">Beschwerden</a>
-        <a href="#" class="hover:text-yellow-400">Login</a>
+        <a href="https://strafkasten.de" target="_blank" class="hover:text-yellow-400">Bußgeldrechner</a>
       </nav>
     </div>
   </header>
