--- a/Bewerben.html
+++ b/Bewerben.html
@@ -31,7 +31,7 @@
         <a href="regeln.html" class="hover:text-yellow-400">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="text-yellow-400 underline font-semibold">Bewerben</a>
         <a href="Beschwerden.html" class="hover:text-yellow-400">Beschwerden</a>
-        <a href="#" class="hover:text-yellow-400">Login</a>
+        <a href="https://strafkasten.de" target="_blank" class="hover:text-yellow-400">Bußgeldrechner</a>
       </nav>
     </div>
   </header>
