--- a/regeln.html
+++ b/regeln.html
@@ -48,7 +48,7 @@
         <a href="regeln.html" class="text-yellow-400 underline font-semibold">Arbeitsvertrag</a>
         <a href="Bewerben.html" class="hover:text-yellow-400">Bewerben</a>
         <a href="Beschwerden.html" class="hover:text-yellow-400">Beschwerden</a>
-        <a href="#" class="hover:text-yellow-400">Login</a>
+        <a href="https://strafkasten.de" target="_blank" class="hover:text-yellow-400">Bußgeldrechner</a>
       </nav>
     </div>
   </header>
